vlib/v/checker/tests/option_interface_mismatch.out
vlib/v/checker/tests/option_interface_mismatch.vv:10:16: notice: unused parameter: `line`
    8 | }
    9 | 
   10 | fn give_string(line string) ?MObject {
      |                ~~~~
   11 |     return if true { 'string' } else { 'string' }
   12 | }
vlib/v/checker/tests/option_interface_mismatch.vv:11:9: error: mismatched types `?MObject` and `string`
    9 | 
   10 | fn give_string(line string) ?MObject {
   11 |     return if true { 'string' } else { 'string' }
      |            ~~
   12 | }
